Fixed Login z-index

--- a/login_register/style.css
+++ b/login_register/style.css
@@ -28,6 +28,7 @@ body{
                 opacity 200ms ease-in-out 0ms,
                 transform 20ms ease-in-out 0ms; */
     transition: 200ms ease-in-out;
+    z-index: 2;
 }
 
 .login.active, .register.active{
